# esp-sentinel-api

./: .env  .env.example  README.md  main.py  pyproject.toml  run_api.sh  test_config.py  test_db.py
src/: __main__.py  main.py
src/api/: routes.py
src/config/: settings.py
src/core/: logging.py
src/dal/: crud.py  database.py  models.py
src/models/: messages.proto  messages_pb2.py  schemas.py
src/services/: mqtt_service.py
tests/: test_api.py
